# Chess

./: CMakeLists.txt  TODO  build.sh
src/: bishop.cc  chessboard-adapter.hh  chessboard.cc  chessboard.hh  king.cc  knight.cc  main.cc  move.cc  move.hh  pawn.cc  pgn-exception.hh  pgn-parser.cc  position.hh  position.hxx  queen.cc  rock.cc  rules.cc  test_rules.cc  test_rules.hh
